--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="calendar-grid">
     <div class="title">
-      <h1><span class="title-1">Marius sin</span><span class="title-2">V-BUCKS</span><span class="title-3">Kalender</span></h1>
+      <h1><span class="title-1">Marius </span><span class="title-2">V-BUCKS</span><span class="title-3">Kalender</span></h1>
     </div>
     <div class="sub">
       <h1><span class="sub-1" id="vbucks">0</span><span class="sub-2">V-BUCKS</span><span class="sub-3">samlet så langt</span> </h2>
