--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Marius sin V-BUCKS Kalender</title>
+  <title>V-BUCKS Kalender</title>
   <link rel="icon" type="image/png" href="./assets/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="./assets/favicon-16x16.png" sizes="16x16" />
   <link rel="stylesheet" href="styles.css"> 
@@ -11,7 +11,7 @@
 <body>
   <div class="calendar-grid">
     <div class="title">
-      <h1><span class="title-1">Marius </span><span class="title-2">V-BUCKS</span><span class="title-3">Kalender</span></h1>
+      <h1><span class="title-1" id="name"></span><span class="title-2">V-BUCKS</span><span class="title-3">Kalender</span></h1>
     </div>
     <div class="sub">
       <h1><span class="sub-1" id="vbucks">0</span><span class="sub-2">V-BUCKS</span><span class="sub-3">samlet så langt</span> </h2>
