--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" href="./assets/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="./assets/favicon-16x16.png" sizes="16x16" />
   <link rel="stylesheet" href="styles.css"> 
+  <link rel="manifest" href="manifest.json" />
 </head>
 <body>
   <div class="calendar-grid">
@@ -1319,6 +1320,10 @@
     </div>
   </div>
   <script src="index.js"></script>
-
+  <script type="module">
+    import 'https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate';
+    const el = document.createElement('pwa-update');
+    document.body.appendChild(el);
+ </script>
 </body>
 </html>
