--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1><span class="title-1" id="name"></span><span class="title-2">V-BUCKS</span><span class="title-3">Kalender</span></h1>
     </div>
     <div class="sub">
-      <h1><span class="sub-1" id="vbucks">0</span><span class="sub-2">V-BUCKS</span><span class="sub-3">samlet så langt</span> </h2>
+      <h1><span class="sub-1" id="vbucks">0</span><span class="sub-2">V-BUCKS</span><span class="sub-3">samlet <span id="sofar">så langt</span></span> </h2>
     </div>
     <div class="day day-1">
       <label>
